# agent-browser-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: cursor-mcp.json  hermes-config.yaml
src/agent_browser_mcp/: cli.py  server.py
